--- a/.github/workflows/metrics_svg.yaml
+++ b/.github/workflows/metrics_svg.yaml
@@ -7,39 +7,35 @@ on:
   workflow_dispatch:
   push: { branches: ["master", "main"] }
 jobs:
-  github-metrics:
+  header:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
-          # The following scopes are required:
-          #  - public_access (default scope)
-          # The following additional scopes may be required:
-          #  - read:org      (for organization related metrics)
-          #  - read:user     (for user related data)
-          #  - read:packages (for some packages related data)
-          #  - repo          (optional, if you want to include private repositories)
-          token: ${{ secrets.METRICS_TOKEN }}
-
-          # Options
           user: pakelley
           template: classic
-          base: header, activity, community, repositories, metadata
           config_timezone: America/Los_Angeles
           config_twemoji: yes
-          plugin_achievements: yes
-          plugin_achievements_display: detailed
-          plugin_achievements_limit: 0
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: B
-          plugin_gists: yes
-          plugin_introduction: yes
-          plugin_introduction_title: yes
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+
+          filename: base.svg
+          base: header, activity, community, repositories
+
+  lang:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          user: pakelley
+          template: classic
+          config_timezone: America/Los_Angeles
+          config_twemoji: yes
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+
+          filename: lang.svg
           plugin_languages: yes
           plugin_languages_analysis_timeout: 15
           plugin_languages_categories: markup, programming
@@ -52,13 +48,78 @@ jobs:
           plugin_languages_sections: most-used
           plugin_languages_skipped: ionic_tutorial, boards-api, gatsby-starter-netlify-cms, pakelley.github.io,  cs425
           plugin_languages_threshold: 0%
+
+  lines:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          user: pakelley
+          template: classic
+          config_timezone: America/Los_Angeles
+          config_twemoji: yes
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+
+          filename: lines.svg
           plugin_lines: yes
           plugin_lines_history_limit: 1
           plugin_lines_repositories_limit: 0
           plugin_lines_sections: base
+
+  contributions:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          user: pakelley
+          template: classic
+          config_timezone: America/Los_Angeles
+          config_twemoji: yes
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+
+          filename: contributions.svg
+
+  so:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          user: pakelley
+          template: classic
+          config_timezone: America/Los_Angeles
+          config_twemoji: yes
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+
+          filename: so.svg
           plugin_stackoverflow: yes
           plugin_stackoverflow_limit: 2
           plugin_stackoverflow_sections: answers-top
           plugin_stackoverflow_lines: 0
           plugin_stackoverflow_lines_snippet: 0
           plugin_stackoverflow_user: 5054505
+
+  achievements:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          user: pakelley
+          template: classic
+          config_timezone: America/Los_Angeles
+          config_twemoji: yes
+          token: ${{ secrets.METRICS_TOKEN }}
+          committer_token: ${{ secrets.GITHUB_TOKEN }}
+          base: ""
+
+          filename: achievements.svg
+          plugin_achievements: yes
+          plugin_achievements_display: detailed
+          plugin_achievements_limit: 0
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: B
