--- a/.github/workflows/metrics_svg.yaml
+++ b/.github/workflows/metrics_svg.yaml
@@ -88,4 +88,4 @@ jobs:
           plugin_achievements_display: detailed
           plugin_achievements_limit: 0
           plugin_achievements_secrets: yes
-          plugin_achievements_threshold: B
+          plugin_achievements_threshold: A
